--- a/src/components/Giscus.astro
+++ b/src/components/Giscus.astro
@@ -1,20 +1,17 @@
 <div class="giscus"></div>
 
 <script
-  is:inline
-  data-astro-rerun
   src="https://giscus.app/client.js"
-  data-repo="trevortylerlee/astro-micro"
-  data-repo-id="R_kgDOL_6l9Q"
+  data-repo="luciancah/blog"
+  data-repo-id="R_kgDOMUYvsw"
   data-category="Announcements"
-  data-category-id="DIC_kwDOL_6l9c4Cfk55"
+  data-category-id="DIC_kwDOMUYvs84CgsOA"
   data-mapping="pathname"
   data-strict="0"
   data-reactions-enabled="1"
   data-emit-metadata="0"
-  data-input-position="top"
+  data-input-position="bottom"
   data-theme="preferred_color_scheme"
-  data-lang="en"
-  data-loading="lazy"
+  data-lang="ko"
   crossorigin="anonymous"
   async></script>
