feat: 한국어 지원좀 했습니다

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import ArrowCard from "@components/ArrowCard.astro";
 import Link from "@components/Link.astro";
 import { getCollection } from "astro:content";
 import type { CollectionEntry } from "astro:content";
+import Image from "astro/components/Image.astro";
 
 const blog = (await getCollection("blog"))
   .filter((post) => !post.data.draft)
@@ -23,52 +24,42 @@ const projects: CollectionEntry<"projects">[] = (
 <Layout title={HOME.TITLE} description={HOME.DESCRIPTION}>
   <Container>
     <h1 class="animate font-semibold text-black dark:text-white">
-      Introducing Astro Micro 🔬
+      🖖🏻 나 이진형이요
     </h1>
     <div class="space-y-16">
       <section>
         <article class="space-y-4">
           <span class="animate">
             <p>
-              Astro Micro is an accessible theme for <Link
-                href="https://astro.build/">Astro</Link
-              >. It's a fork of
-              <Link href="https://github.com/markhorn-dev"> Mark Horn's </Link> popular
-              theme <Link href="https://astro.build/themes/details/astronano/"
-                >Astro Nano</Link
-              >. Like Nano, Micro comes with zero frameworks installed.
+              이것저것 합니다. <Link href="https://github.com/luciancah"
+                >Github</Link
+              >
             </p>
-            <p>
-              Micro adds features like <Link href="https://pagefind.app/"
-                >Pagefind</Link
-              > for search, <Link href="https://giscus.app">Giscus</Link> for comments,
-              and more. For a full list of changes, see this <Link
-                href="/blog/00-micro-changelog">blog post</Link
-              >.
-            </p>
-          </span>
-          <span class="animate">
-            <p>
-              Micro still comes with everything great about Nano — full type
-              safety, a sitemap, an RSS feed, and Markdown + MDX support. Styled
-              with TailwindCSS and preconfigured with system, light, and dark
-              themes.
-            </p>
-            <p>
-              Visit
-              <Link href="https://github.com/trevortylerlee/astro-micro">
-                Astro Micro on GitHub
-              </Link>
-              to fork the repository to get started.
-            </p>
+            <figure>
+              <Image
+                src="/jinjin.jpg"
+                alt="나요"
+                class="rounded-lg"
+                width="300"
+                height="300"
+                loading="lazy"
+              />
+              <figcaption
+                class="text-center text-sm italic text-gray-500 dark:text-gray-400"
+              >
+                이게 나요
+              </figcaption>
+            </figure>
           </span>
         </article>
       </section>
 
       <section class="animate space-y-6">
         <div class="flex flex-wrap items-center justify-between gap-y-2">
-          <h2 class="font-semibold text-black dark:text-white">Latest posts</h2>
-          <Link href="/blog"> See all posts </Link>
+          <h2 class="font-semibold text-black dark:text-white">
+            🙈 최근 게시글
+          </h2>
+          <Link href="/blog"> 전체보기 </Link>
         </div>
         <ul class="not-prose flex flex-col gap-4">
           {
@@ -84,9 +75,9 @@ const projects: CollectionEntry<"projects">[] = (
       <section class="animate space-y-6">
         <div class="flex flex-wrap items-center justify-between gap-y-2">
           <h2 class="font-semibold text-black dark:text-white">
-            Recent projects
+            🙉 최근 프로젝트
           </h2>
-          <Link href="/projects"> See all projects </Link>
+          <Link href="/projects"> 전체보기 </Link>
         </div>
         <ul class="not-prose flex flex-col gap-4">
           {
@@ -100,13 +91,10 @@ const projects: CollectionEntry<"projects">[] = (
       </section>
 
       <section class="animate space-y-4">
-        <h2 class="font-semibold text-black dark:text-white">Let's Connect</h2>
-        <article>
-          <p>
-            If you want to get in touch with me about something or just to say
-            hi, reach out on social media or send me an email.
-          </p>
-        </article>
+        <h2 class="font-semibold text-black dark:text-white">📬 연락하쇼잉</h2>
+        <!-- <article>
+          <p>머 쓸게 없네..</p>
+        </article> -->
         <ul class="not-prose flex flex-wrap gap-2">
           {
             SOCIALS.map((SOCIAL) => (
