feat: 네이버 웹마스터 추가

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,10 @@ const { title, description } = Astro.props;
 
 <!doctype html>
 <html lang="en">
+  <meta
+    name="naver-site-verification"
+    content="0c801ee892df6a79cf528409a2988972cc54f5b1"
+  />
   <script>
     import { inject } from "@vercel/analytics";
     inject();
