fix: 검색 완료시 닫히도록 수정

--- a/src/components/PageFind.astro
+++ b/src/components/PageFind.astro
@@ -72,6 +72,13 @@ import Search from "astro-pagefind/components/Search";
     }
   });
 
+  // close pagefind if clicked searched result (link)
+  document.addEventListener("click", (event) => {
+    if (event.target.classList.contains("pagefind-ui__result-link")) {
+      closePagefind();
+    }
+  });
+
   backdrop?.addEventListener("click", (event) => {
     if (!event.target.closest("#pagefind-container")) {
       closePagefind();
